add DELETE /users/me/subscriptions/<uuid>
